Changed NeurIPS logo

--- a/src/components/ImageCard.astro
+++ b/src/components/ImageCard.astro
@@ -1,6 +1,6 @@
 ---
 import NeurIPS_logo from '../images/NeurIPS_logo.svg';
-import nl4optlogo from '../images/nl4optlogo_2023.png';
+import nl4optlogo from '../images/logo1.png';
 ---
 <div class="page-title">
     <div class="title">
